style changes, scrollbars fix

--- a/client/Framework/themes/default/kdfn.styl
+++ b/client/Framework/themes/default/kdfn.styl
@@ -64,6 +64,11 @@ scrollbars(a=#242424)
       border-top 1px solid lighten(a, 70%)
       border-left 1px solid lighten(a, 70%)
 
+  ::-webkit-resizer
+    height 10px
+    width 10px
+    background a
+
 vendor(a,b)
   // cursor  pointer //temp
   -webkit-{a}  b
