--- a/client/stylus/app.contentdisplays.styl
+++ b/client/stylus/app.contentdisplays.styl
@@ -801,11 +801,14 @@ a.opinion-size-link
 .result-container
   borderBox()
   width 100%
+
   rounded(4px)
   box-shadow                        inset 0 1px 2px rgba(0,0,0,0.10)
   background-color                  #E0E0DF
 
   .result-frame
     width 100%
+    min-height 200px
+    max-height 400px
     padding
     rounded(4px)
